api: add Workload model
